Add README.md file

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -1,1 +1,91 @@
-<h1>gasdfa</h1>
+<!DOCTYPE html> 
+<!-- khai bao phien ban html -->
+<!-- ctrl K C : comment ... ctrl K U :uncomment  -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    /* <!-- <p>hihi</p> --> */
+    /* <!-- Thẻ inline: chiếm chiều dài bắng nội dung cần --> */
+    <p>The SPAN element is an inline element, and 
+    will not start on a new line and only takes up as much width as necessary.</p>
+    /* <!-- Thẻ p là thẻ block nên sẽ lấy chiếm chiều rộng của trang web, dù nội
+    dung trong thẻ p có xuống hàng hay có khoảng trắng thì html sẽ tự bỏ để lấy hết chiều rộng
+    của trang . Suy ra không giữ được cấu trúc của nội dung nếu yêu cầu cí xuống hàng trong 
+    nội dung --> */ */
+    <pre>The SPAN element is an inline element, and will not start 
+        on a new line and only takes up as much width as necessary.</pre>
+    /* <!-- thẻ pre sẽ giúp giữ được cấu trúc của câu --> */
+    <h1>Đừng quên <b><ins>tôi</ins</b></h1>
+    <div style="font-family:Arial, Helvetica, sans-serif ;text-align: center;">
+        <p> AHIHI</p>
+    </div>
+    <!-- <img src="https://scontent.fsgn13-2.fna.fbcdn.net/v/t39.30808-6/300956217_1200880730483085_7030430802557306291_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=XX7hGTECKHAAX_g4XG4&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT84zl-OIvieDKsyA87azzjDCOoCaUHP5YvR4Os_TIBpCQ&oe=63281D27" 
+    alt="Hình của bảo" style="width:50%;height:50%;" > -->
+    <!-- <img src="https://scontent.fsgn13-2.fna.fbcdn.net/v/t39.30808-6/300956217_1200880730483085_7030430802557306291_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=XX7hGTECKHAAX_g4XG4&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT84zl-OIvieDKsyA87azzjDCOoCaUHP5YvR4Os_TIBpCQ&oe=63281D27" 
+    alt="Hình của bảo" width=50% height=50% float="right"> -->
+    <!-- Trong thẻ img lúc nào cũng phải có thuộc tính alt -->
+    <!-- <img src="https://scontent.fsgn13-2.fna.fbcdn.net/v/t39.30808-6/300956217_1200880730483085_7030430802557306291_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=XX7hGTECKHAAX_g4XG4&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT84zl-OIvieDKsyA87azzjDCOoCaUHP5YvR4Os_TIBpCQ&oe=63281D27" 
+    alt="Hình của bảo" width="150" height="150" float="left"> -->
+        <img src="https://scontent.fsgn13-2.fna.fbcdn.net/v/t39.30808-6/300956217_1200880730483085_7030430802557306291_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=XX7hGTECKHAAX_g4XG4&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT84zl-OIvieDKsyA87azzjDCOoCaUHP5YvR4Os_TIBpCQ&oe=63281D27" 
+    alt="Hình của bảo" style="width:150px;height: 150px;border: 0;"  >
+    <br>
+    <a href="html_images.php" target="_blank">
+        <img alt="hihi"src="https://scontent.fsgn13-2.fna.fbcdn.net/v/t39.30808-6/300956217_1200880730483085_7030430802557306291_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=XX7hGTECKHAAX_g4XG4&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT84zl-OIvieDKsyA87azzjDCOoCaUHP5YvR4Os_TIBpCQ&oe=63281D27" >
+    </a>
+    <p><a href="#C4">Jump to Chapter 4</a></p>
+    <h2>Chapter 1</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Chapter 2</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2 id="C4">Chapter 3</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Chapter 4</h2>
+<p>This chapter explains ba bla bla</p>
+    <ul>
+        <li><a href="https://nhatphuc.com/download-lich-in/">Bảo</a></li>
+        <li>Duy</li>
+        <li>Cường</li>
+    </ul>
+    /* <!-- ul : không có thứ tự --> */
+    <ol type="A">
+        <li>Hùng</li>
+        <li>Phú</li>
+    </ol>
+    /* <!-- ol : có thứ tự, có thể kèm type : để định dạng phía trước --> */
+    <dl>
+        <dt>coffe</dt>
+        <!-- thuộc tính -->
+        <dd>-black</dd> 
+        <!-- mô tả -->
+        <dt>milk tea</dt>
+        <dd>-sweet</dd>
+    </dl>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vAbDajCuswg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+    <p>
+        <iframe width="420" height="315"
+        src="https://player.vimeo.com/progressive_redirect/playback/732740640/rendition/540p/file.mp4?loc=external&oauth2_token_id=57447761&signature=7047110105803318c0f05e3ddd35a709ce07ade122b1fe9f3b1cb3fb4761f8dc">
+        </iframe>
+    </p>
+    <p>
+        <video width="400" height="auto" controls>
+			<source src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1" type="video/mp4">
+		</video>
+    </p>
+</body>
+</html>
