--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -1,1 +1,43 @@
-<p>hihi</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Information about Cao Minh Bao</title>
+</head>
+<body>
+    <div style="text-align:center;border-radius:20%;">
+        <img src="https://scontent.fsgn5-8.fna.fbcdn.net/v/t39.30808-6/300956217_1200880730483085_7030430802557306291_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=Ds6zY6NHArIAX9jHy-2&_nc_ht=scontent.fsgn5-8.fna&oh=00_AT_iUU-pCke5wLsu09g-4MMy7lj47iPTCU2KABNUB3iTog&oe=632A1767" style="width:10%; height:10%;text-align:center;"alt="Hình của Bảo">
+    </div>
+    <h1>
+        CAO MINH BAO
+    </h1>
+    <h4>
+        KỸ THUẬT PHẦN MỀM
+    </h4>
+    <div class="container container-left">
+        <p class="tieude">
+            LÝ LỊCH CÁ NHÂN
+        </p>
+        <ul>
+            <li>
+                <p>
+                    Đang sống và làm việc tại thành phố Hồ Chí Minh
+                </p>
+            </li>
+            <li>
+                <p>
+                    Có khả năng giao tiếp tiếng anh ở mức độ khá
+                </p>
+            </li>
+        </ul>
+    </div>
+    <div class="container container-right">
+        <p class="tieude">
+            KINH NGHIỆM LÀM VIỆC
+        </p>
+    </div>
+</body>
+</html>
